Closed
Bug 1723741
Opened 4 years ago
Closed 4 years ago
Recorded SVG image blobs don't display in taskbar
Categories
(Core :: Graphics: ImageLib, defect, P3)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
92 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | disabled |
| firefox90 | --- | unaffected |
| firefox91 | --- | disabled |
| firefox92 | --- | fixed |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Flip
image.svg.blob-imagetotrue - Restart Firefox.
- Icons in the taskbar are missing.
| Assignee | ||
Comment 1•4 years ago
•
|
||
This should only trigger when there is something other than an integer translation:
But the only thing we do to the gfxContext transform is what should be an integer translation:
There are some floating point conversions here that might be getting in the way.
| Assignee | ||
Comment 2•4 years ago
|
||
The signature differs from what I wrote:
I guess I fixed the test case accidentally by setting the opacity to completely transparent, and shortcutting somewhere....
| Assignee | ||
Comment 3•4 years ago
|
||
This occurred due to a signature mismatch with
gfxUtils::DrawPixelSnapped. A previous patch in bug 1712855 put the
wrong field in the opacity parameter. It implicitly converted a bool to
a float silently, causing the opacity to be 0.0.
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fa3677b2a1e5
Fix how SVG images in blob recordings would always be transparent. r=gfx-reviewers,jrmuizel
Comment 5•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox92:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
status-firefox90:
--- → unaffected
status-firefox91:
--- → disabled
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → disabled
Updated•4 years ago
|
QA Whiteboard: [qa-92b-p2]
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•